[project]
name = "bulma-steps"
version = "0.1.0"
description = "Steps component for bulma.io"
authors = [
    {name = "Bill Comisky",email = "bcomisky@gmail.com"}
]
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
dependencies = [
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
include = ["src/sass/index.sass"]
